Finish Front Register #2

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,7 +37,7 @@
           <a href="#">¿Olvidaste tu contraseña?</a>
         </div>
         <div class="form-group">
-          <p>¿No tienes una cuenta? <a href="#">Regístrate</a></p>
+          <p>¿No tienes una cuenta? <a routerLink="/registro">Regístrate</a></p>
         </div>
       </div>
     </div>
