--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,1 +1,51 @@
-<p>registro works!</p>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registrarse</title>
+    <link rel="stylesheet" href="registro.component.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="register-box">
+        <h1>Registrarse</h1>
+        <form action="#" method="POST">
+          <div class="form-group">
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Correo Electrónico"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              id="password"
+              name="password"
+              placeholder="Contraseña"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="url"
+              id="photo-url"
+              name="photo-url"
+              placeholder="URL de la Foto"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <button type="submit">Registrarse</button>
+          </div>
+        </form>
+        <div class="form-group">
+          <p>¿Ya tienes una cuenta? <a routerLink="/login">Iniciar Sesión</a></p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
