--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,8 @@
     <div class="container">
       <div class="login-box">
         <h1>Iniciar Sesión</h1>
-        <form action="#" method="POST">
+        <!-- Agrega el formulario aquí -->
+        <form (ngSubmit)="onSubmit()">
           <div class="form-group">
             <input
               type="email"
@@ -18,6 +19,7 @@
               name="email"
               placeholder="Correo Electrónico"
               required
+              [(ngModel)]="email"
             />
           </div>
           <div class="form-group">
@@ -27,12 +29,14 @@
               name="password"
               placeholder="Contraseña"
               required
+              [(ngModel)]="password"
             />
           </div>
           <div class="form-group">
             <button type="submit">Iniciar Sesión</button>
           </div>
         </form>
+        <!-- Fin del formulario -->
         <div class="form-group">
           <a href="#">¿Olvidaste tu contraseña?</a>
         </div>
@@ -41,5 +45,6 @@
         </div>
       </div>
     </div>
+    
   </body>
 </html>
