--- a/src/app/registro/registro.component.css
+++ b/src/app/registro/registro.component.css
@@ -1,77 +1,271 @@
-body {
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: Arial, sans-serif;
-  }
-  
+.container {
+  display: flex;
+  min-height: 100vh; /* Altura completa de la ventana */
+}
+
+.left-column {
+  flex: 1; /* Ocupa la mitad del espacio */
+  background: linear-gradient(#a8e063, #3cb043, #2b8031);
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra los elementos horizontalmente */
+  justify-content: center; /* Centra los elementos verticalmente */
+  text-align: center; /* Centra el texto */
+}
+
+.universidad-content {
+  display: flex; /* Utiliza Flexbox */
+  align-items: center; /* Centra los elementos verticalmente */
+  justify-content: center; /* Centra los elementos horizontalmente en la columna */
+  text-align: left; /* Alinea el texto a la izquierda */
+}
+
+.universidad-imagen {
+  max-width: 20%; /* Reduce el tamaño de la imagen */
+  height: auto; /* Mantiene la proporción de la imagen */
+  margin-right: 20px; /* Añade espacio entre la imagen y el texto */
+  /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25); /* X-offset, Y-offset, Blur-radius, Spread-radius, Color */
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
+}
+
+.universidad-imagen:hover,
+.universidad-texto:hover,
+.sistema-texto:hover {
+  transform: scale(1.05); /* Aumenta ligeramente el tamaño */
+  transition: transform 0.3s ease-in-out; /* Suaviza la transición */
+}
+
+.texts {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.universidad-texto {
+  color: #fff; /* Cambia el color del texto si es necesario */
+  font-size: 35px; /* Ajusta el tamaño del texto */
+  font-weight: bold; /* Hace el texto más grueso */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* X-offset, Y-offset, Blur-radius, Color */
+}
+
+.sistema-texto {
+  color: #fff; /* Cambia el color del texto si es necesario */
+  font-size: 20px; /* Ajusta el tamaño del texto */
+  font-weight: normal; /* Puedes ajustar el peso de la fuente si es necesario */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* X-offset, Y-offset, Blur-radius, Color */
+}
+
+.right-column {
+  flex: 0.7; /* Ocupa la otra mitad del espacio */
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Centra el contenido del formulario */
+  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.2); /* Sombra hacia la izquierda */
+}
+
+.registro-container {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #ffffff;
+  font-family: "Roboto", sans-serif;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.file-input {
+  margin: 20px 0;
+}
+
+.file-label {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #eee;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.file-label:hover {
+  background-color: #ddd;
+}
+
+.image-preview {
+  text-align: center;
+}
+
+.image-preview img {
+  max-width: 100%;
+  max-height: 200px;
+}
+
+.mat-icon {
+  cursor: pointer;
+}
+
+.submit-button,
+.form-group {
+  display: flex;
+  justify-content: center; /* Centra horizontalmente en su contenedor */
+  width: 100%; /* Asegura que el contenedor ocupe todo el ancho disponible */
+}
+
+.submit-button {
+  margin-top: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  margin-top: 20px; /* Añade un poco de espacio arriba del texto */
+}
+
+button {
+  width: 85%;
+  padding: 10px;
+  background-color: #3cb043;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-family: Arial, sans-serif; /* Cambia la fuente del botón */
+  font-size: 18px; /* Cambia el tamaño del texto del botón */
+}
+
+button:enabled {
+  background-color: #3cb043; /* Color de fondo cuando el botón está activo */
+  color: #fff; /* Color del texto, elige un color que tenga buen contraste con el fondo */
+}
+
+button:enabled:hover {
+  background-color: darken(
+    #3cb043,
+    10%
+  ); /* Oscurece el color al pasar el mouse */
+}
+
+/*button:hover {
+  background-color: #2b8031;
+}*/
+
+h1 {
+  font-size: 35px; /* Aumenta el tamaño del encabezado "Iniciar Sesión" */
+  margin-bottom: 30px;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Cambia la fuente del encabezado */
+}
+
+a {
+  text-decoration: none;
+  color: #3cb043;
+  font-family: Arial, sans-serif; /* Cambia la fuente de los enlaces */
+  font-size: 15px; /* Cambia el tamaño del texto de los enlaces */
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.file-input {
+  margin: 20px 0;
+  display: flex;
+  align-items: center;
+}
+
+.file-label {
+  display: inline-flex;
+  align-items: center;
+  padding: 0 20px;
+  height: 56px; /* Altura estándar de los campos de entrada Material */
+  background-color: #eee;
+  cursor: pointer;
+  border-radius: 4px;
+  width: 100%; /* Asegúrate de que ocupe todo el ancho */
+  justify-content: left; /* Alinea el texto a la izquierda */
+  box-sizing: border-box;
+}
+
+.file-label mat-icon {
+  margin-right: 10px; /* Espacio entre el icono y el texto */
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  margin-bottom: 15px; /* Espaciado entre campos */
+  position: relative; /* Para posicionar el icono */
+}
+
+.input-icon {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Material Icons";
+  margin-bottom: 18px;
+}
+
+/* Estilos responsivos específicos para dispositivos móviles */
+@media (max-width: 600px) {
   .container {
-    background-color: #ffffff;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    text-align: center;
-    width: 550px;
-    margin: 0 auto;
+    flex-direction: column; /* Cambia la disposición a columna */
   }
-  
-  .register-box {
-    max-width: 400px;
-    margin: 0 auto;
+
+  .left-column {
+    order: -1; /* Coloca la columna izquierda arriba */
+    display: flex; /* Vuelve a mostrar la columna izquierda */
+    flex-direction: row; /* Cambia la dirección a fila para alinear horizontalmente */
+    justify-content: center; /* Centra los elementos horizontalmente */
+    align-items: center; /* Centra los elementos verticalmente */
+    width: 100%; /* Asegura que ocupe todo el ancho disponible */
+    padding: 10px 0; /* Agrega algo de relleno arriba y abajo */
+    background: linear-gradient(
+      #a8e063,
+      #3cb043,
+      #2b8031
+    ); /* Mantiene el fondo */
   }
-  
-  h1 {
-    font-size: 35px;
-    margin-bottom: 20px;
-    padding: 0;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+  .universidad-imagen {
+    width: 50px; /* Reduce el tamaño de la imagen */
+    height: auto; /* Mantiene la proporción de la imagen */
   }
-  
+
+  .universidad-texto,
+  .sistema-texto {
+    font-size: 14px; /* Reduce el tamaño del texto */
+  }
+
+  .right-column {
+    width: 100%; /* Ocupa el ancho completo */
+    box-shadow: none; /* Elimina la sombra */
+  }
+
+  .registro-container {
+    margin-top: 20px; /* Añade espacio arriba del formulario */
+  }
+
+  .input-wrapper {
+    margin-bottom: 10px; /* Reduce el espacio entre los campos de entrada */
+  }
+
+  .submit-button,
   .form-group {
-    margin-bottom: 15px;
+    flex-direction: column; /* Alinea verticalmente los botones y enlaces */
+    align-items: center; /* Centra los elementos */
   }
-  
-  input[type="email"],
-  input[type="password"],
-  input[type="url"] {
-    width: 80%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 5px;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
+
+  .submit-button button,
+  .form-group a {
+    width: 100%; /* Ajusta el ancho al contenedor */
+    margin: 5px 0; /* Ajusta el margen para los elementos */
   }
-  
-  button {
-    width: 85%;
-    padding: 10px;
-    background-color: #3cb043;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-family: Arial, sans-serif;
-    font-size: 18px;
-  }
-  
-  button:hover {
-    background-color: #2b8031;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #3cb043;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
+}
