--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,51 +1,127 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registrarse</title>
-    <link rel="stylesheet" href="registro.component.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="register-box">
-        <h1>Registrarse</h1>
-        <form action="#" method="POST">
-          <div class="form-group">
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Correo Electrónico"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="Contraseña"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <input
-              type="url"
-              id="photo-url"
-              name="photo-url"
-              placeholder="URL de la Foto"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <button type="submit">Registrarse</button>
-          </div>
-        </form>
-        <div class="form-group">
-          <p>¿Ya tienes una cuenta? <a routerLink="/login">Iniciar Sesión</a></p>
-        </div>
+<div class="container">
+  <div class="left-column">
+    <div class="universidad-content">
+      <img
+        src="../../assets/logouv.png"
+        alt="UV Logo"
+        class="universidad-imagen"
+      />
+      <div class="texts">
+        <p class="universidad-texto">Universidad Veracruzana</p>
+        <p class="sistema-texto">Sistema Integral de Asistencia Estudiantil</p>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+  <div class="right-column">
+    <div class="registro-container">
+      <h1>Registrarse</h1>
+      <form [formGroup]="registroForm" (ngSubmit)="onRegister()">
+        <div class="input-wrapper matricula-field">
+          <div class="input-icon">school</div>
+          <mat-form-field class="full-width">
+            <mat-label>Matrícula</mat-label>
+            <input
+              matInput
+              formControlName="matricula"
+              placeholder="S20020028"
+              required
+            />
+            <mat-error
+              *ngIf="registroForm.controls['matricula'].hasError('required')"
+            >
+              La matrícula es <strong>obligatoria</strong>.
+            </mat-error>
+            <mat-error
+              *ngIf="registroForm.controls['matricula'].hasError('pattern')"
+            >
+              Formato de matrícula no válido.
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="input-wrapper correo-field">
+          <div class="input-icon">email</div>
+          <mat-form-field class="full-width">
+            <mat-label>Correo Electrónico</mat-label>
+            <input
+              matInput
+              formControlName="correo"
+              placeholder="S20020028@estudiantes.uv.mx"
+              required
+            />
+            <mat-error
+              *ngIf="registroForm.controls['correo'].hasError('required')"
+            >
+              El correo es <strong>obligatorio</strong>.
+            </mat-error>
+            <mat-error
+              *ngIf="registroForm.controls['correo'].hasError('pattern')"
+            >
+              Formato de correo no válido.
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="input-wrapper contrasena-field">
+          <div class="input-icon">lock</div>
+          <mat-form-field class="full-width">
+            <mat-label>Contraseña</mat-label>
+            <input
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              formControlName="contraseña"
+              required
+            />
+            <mat-icon matSuffix (click)="hide = !hide">{{
+              hide ? "visibility_off" : "visibility"
+            }}</mat-icon>
+            <mat-error
+              *ngIf="registroForm.controls['contraseña'].hasError('required')"
+            >
+              La contraseña es <strong>obligatoria</strong>.
+            </mat-error>
+            <mat-error
+              *ngIf="registroForm.controls['contraseña'].hasError('minlength')"
+            >
+              La contraseña debe tener al menos 8 caracteres.
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="file-input">
+          <input
+            type="file"
+            id="file"
+            (change)="onImageSelected($event)"
+            hidden
+          />
+          <label for="file" class="file-label">
+            <mat-icon>file_upload</mat-icon>
+            {{ selectedFileName }}
+          </label>
+        </div>
+
+        <div *ngIf="imagePreview" class="image-preview">
+          <img
+            [src]="imagePreview"
+            alt="Vista previa de la imagen seleccionada"
+          />
+        </div>
+        <div class="submit-button">
+          <button
+            mat-raised-button
+            color="primary"
+            type="submit"
+            [disabled]="registroForm.invalid"
+            class="submit-button"
+          >
+            Registrarse
+          </button>
+        </div>
+      </form>
+      <div class="form-group">
+        <p>¿Ya tienes una cuenta? <a routerLink="/login">Iniciar Sesión</a></p>
+      </div>
+    </div>
+  </div>
+</div>
