--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,29 +11,55 @@
       <div class="login-box">
         <h1>Iniciar Sesión</h1>
         <!-- Agrega el formulario aquí -->
-        <form (ngSubmit)="onSubmit()">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <input
               type="email"
-              id="email"
-              name="email"
+              formControlName="correo"
               placeholder="Correo Electrónico"
               required
-              [(ngModel)]="email"
             />
+            <div
+              *ngIf="
+                loginForm.controls['correo'].invalid &&
+                loginForm.controls['correo'].touched
+              "
+            >
+              <small *ngIf="loginForm.controls['correo'].errors?.['required']"
+                >El correo es obligatorio.</small
+              >
+              <small *ngIf="loginForm.controls['correo'].errors?.['pattern']"
+                >Formato de correo no válido.</small
+              >
+            </div>
           </div>
           <div class="form-group">
             <input
               type="password"
-              id="password"
-              name="password"
+              formControlName="contraseña"
               placeholder="Contraseña"
               required
-              [(ngModel)]="password"
             />
+            <div
+              *ngIf="
+                loginForm.controls['contraseña'].invalid &&
+                loginForm.controls['contraseña'].touched
+              "
+            >
+              <small
+                *ngIf="loginForm.controls['contraseña'].errors?.['required']"
+                >La contraseña es obligatoria.</small
+              >
+              <small
+                *ngIf="loginForm.controls['contraseña'].errors?.['minlength']"
+                >La contraseña debe tener al menos 8 caracteres.</small
+              >
+            </div>
           </div>
           <div class="form-group">
-            <button type="submit">Iniciar Sesión</button>
+            <button type="submit" [disabled]="loginForm.invalid">
+              Iniciar Sesión
+            </button>
           </div>
         </form>
         <!-- Fin del formulario -->
@@ -45,6 +71,5 @@
         </div>
       </div>
     </div>
-    
   </body>
 </html>
