--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,54 +18,64 @@
       <!-- Agrega el formulario aquí -->
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="full-width">
-          <input
-            type="email"
-            formControlName="correo"
-            placeholder="Correo Electrónico"
-            (focus)="correoPlaceholder = 'S20020028@estudiantes.uv.mx'"
-            (blur)="correoPlaceholder = 'Correo Electrónico'"
-            [attr.placeholder]="correoPlaceholder"
-            required
-          />
-          <div
-            *ngIf="
-              loginForm.controls['correo'].invalid &&
-              loginForm.controls['correo'].touched
-            "
-          >
-            <small *ngIf="loginForm.controls['correo'].errors?.['required']"
-              >El correo es obligatorio.</small
+          <div class="input-wrapper">
+            <div class="input-icon material-icons">email</div>
+            <input
+              type="email"
+              formControlName="correo"
+              placeholder="Correo Electrónico"
+              (focus)="correoPlaceholder = 'S20020028@estudiantes.uv.mx'"
+              (blur)="correoPlaceholder = 'Correo Electrónico'"
+              [attr.placeholder]="correoPlaceholder"
+              required
+            />
+            <div
+              *ngIf="
+                loginForm.controls['correo'].invalid &&
+                loginForm.controls['correo'].touched
+              "
             >
-            <small *ngIf="loginForm.controls['correo'].errors?.['pattern']"
-              >Formato de correo no válido.</small
-            >
+              <small *ngIf="loginForm.controls['correo'].errors?.['required']"
+                >El correo es obligatorio.</small
+              >
+              <small *ngIf="loginForm.controls['correo'].errors?.['pattern']"
+                >Formato de correo no válido.</small
+              >
+            </div>
           </div>
         </div>
+
         <div class="full-width">
-          <input
-            type="password"
-            formControlName="contraseña"
-            placeholder="Contraseña"
-            (focus)="contrasenaPlaceholder = '12345678'"
-            (blur)="contrasenaPlaceholder = 'Contraseña'"
-            [attr.placeholder]="contrasenaPlaceholder"
-            required
-          />
-          <div
-            *ngIf="
-              loginForm.controls['contraseña'].invalid &&
-              loginForm.controls['contraseña'].touched
-            "
-          >
-            <small *ngIf="loginForm.controls['contraseña'].errors?.['required']"
-              >La contraseña es obligatoria.</small
+          <div class="input-wrapper">
+            <div class="input-icon material-icons">lock</div>
+            <input
+              type="password"
+              formControlName="contraseña"
+              placeholder="Contraseña"
+              (focus)="contrasenaPlaceholder = '12345678'"
+              (blur)="contrasenaPlaceholder = 'Contraseña'"
+              [attr.placeholder]="contrasenaPlaceholder"
+              required
+            />
+
+            <div
+              *ngIf="
+                loginForm.controls['contraseña'].invalid &&
+                loginForm.controls['contraseña'].touched
+              "
             >
-            <small
-              *ngIf="loginForm.controls['contraseña'].errors?.['minlength']"
-              >La contraseña debe tener al menos 8 caracteres.</small
-            >
+              <small
+                *ngIf="loginForm.controls['contraseña'].errors?.['required']"
+                >La contraseña es obligatoria.</small
+              >
+              <small
+                *ngIf="loginForm.controls['contraseña'].errors?.['minlength']"
+                >La contraseña debe tener al menos 8 caracteres.</small
+              >
+            </div>
           </div>
         </div>
+
         <div class="submit-button">
           <button
             mat-raised-button
