--- a/src/app/materias/materias.component.html
+++ b/src/app/materias/materias.component.html
@@ -1,6 +1,10 @@
 <div class="outer-container">
   <div class="container">
-    <div class="materia" *ngFor="let materia of materias">
+    <div
+      class="materia"
+      *ngFor="let materia of materias"
+      (click)="verAsistencia(materia.nrc, materia.nombre, materia.horasemana)"
+    >
       <h3>{{ materia.nombre }}</h3>
       <p>Turno: {{ materia.turno }}</p>
       <p>NRC: {{ materia.nrc }}</p>
